2002-10-22  Per Bothner  <per@bothner.com>

	* TestMisc.java:  Update 'namespace' to 'declare namespace'.

2002-07-28  Per Bothner  <per@bothner.com>

	* TestMisc.java (main):  Add 4 for tests for type testing.

2002-07-24  Per Bothner  <per@bothner.com>

	* TesMisc.java (eval):  Update for gnu.expr changes.

2002-06-24  Per Bothner  <per@bothner.com>

	* TestSuite.java (main):  Document.document method is renamed to parse.

2002-06-12  Per Bothner  <per@bothner.com>

	* exp-format-users.html:  First test for XSLT implementation.
	* format-users.xsl:  Expected output for latter.
	* Makefile.am (check-format-users):  New rule.

2002-06-11  Per Bothner  <per@bothner.com>

	* TestMisc.java:  New tests for descendant:: and descendant-or-self::.

2002-04-08  Per Bothner  <per@bothner.com>

	* TestMisc.java:  Added tests for node(), text() and children().

	* use-cases.xml:  We can now use text() as in the original use-cases.

2002-03-19  Per Bothner  <per@bothner.com>

	* TestMisc.java:  Add two tests of position().

2002-03-07  Per Bothner  <per@bothner.com>

	* bids.xml.in, items.xml.in, users.xml.in:  New test data files.
	* Makefile.am (EXTRA_DIST):  Add new files.
	* use-cases.xml:  Import 2 more test cases from W3C Use Cases.

2002-02-12  Per Bothner  <per@bothner.com>

	* TestMisc.java (eval):  Call CallContext.getInstance.

2002-02-05  Per Bothner  <per@bothner.com>

	* book1.xml.in:  New datafile for W3C use-cases.
	* reviews.xml.in:  New datafile for W3C use-cases.
	* Makefile.am (EXTRA_DIST)):  Update accordingly.
	* use-cases.xml:  Add 7 new tests from W3C use-cases.

2002-01-29  Per Bothner  <per@bothner.com>

	* TestMisc.java (printSummary):  New method.
	(main):  Call printSummary.

	* TestMisc.java (matches):  New method.
	(evalTest):  Use matches rather than equals.
	* TestSuite.java:  New class, inherits from TestMisc.
	* bib.xml.in:  New data file, referenced from uses-cases.xml.
	* use-cases.xml:  New collection of tests, from W3C use-cases.